refactor: instead of copying the files from Besu for the reference tests, use the originals
Signed-off-by: Daniel Lehrner <daniel.lehrner@consensys.net>