@@ -44,7 +44,17 @@ public class BlockchainReferenceTestTools {
   private static final ReferenceTestProtocolSchedules REFERENCE_TEST_PROTOCOL_SCHEDULES =
       ReferenceTestProtocolSchedules.create();
 
-  private static final List<String> NETWORKS_TO_RUN = List.of("London");
+  private static final List<String> NETWORKS_TO_RUN;
+
+  static {
+    final String networks =
+        System.getProperty(
+            "test.ethereum.blockchain.eips",
+            "FrontierToHomesteadAt5,HomesteadToEIP150At5,HomesteadToDaoAt5,EIP158ToByzantiumAt5,"
+                + "Frontier,Homestead,EIP150,EIP158,Byzantium,Constantinople,ConstantinopleFix,Istanbul,Berlin,"
+                + "London" /*,Merge,Shanghai,Cancun,Prague,Osaka,Bogota"*/);
+    NETWORKS_TO_RUN = Arrays.asList(networks.split(","));
+  }
 
   private static final JsonTestParameters<?, ?> params =
       JsonTestParameters.create(BlockchainReferenceTestCaseSpec.class)
@@ -56,14 +66,18 @@ public class BlockchainReferenceTestTools {
               });
 
   static {
-    // Consumes a huge amount of memory.
+    if (NETWORKS_TO_RUN.isEmpty()) {
+      params.ignoreAll();
+    }
+
+    // Consumes a huge amount of memory
     params.ignore("static_Call1MB1024Calldepth_d1g0v0_\\w+");
     params.ignore("ShanghaiLove_.*");
 
-    // Absurd amount of gas, doesn't run in parallel.
+    // Absurd amount of gas, doesn't run in parallel
     params.ignore("randomStatetest94_\\w+");
 
-    // Don't do time consuming tests.
+    // Don't do time-consuming tests
     params.ignore("CALLBlake2f_MaxRounds.*");
     params.ignore("loopMul_*");
 
@@ -72,18 +86,8 @@ public class BlockchainReferenceTestTools {
     // Perfectly valid test pre-merge.
     params.ignore("UncleFromSideChain_(Merge|Shanghai|Cancun|Prague|Osaka|Bogota)");
 
-    // Reference Tests are old.  Max blob count is 6.
-    params.ignore("blobhashListBounds5");
-    params.ignore("blockWithAllTransactionTypes");
-
-    // EIP-4788 is still in flux and the current fill is not against the final address.
-    params.ignore("\\[Cancun\\]");
-
-    // EOF tests are written against an older version of the spec.
+    // EOF tests are written against an older version of the spec
     params.ignore("/stEOF/");
-
-    // Test hangs and needs to be further investigated.
-    params.ignore("static_Call50000_sha256");
   }
 
   private BlockchainReferenceTestTools() {
@@ -91,10 +95,9 @@ public class BlockchainReferenceTestTools {
   }
 
   public static Collection<Object[]> generateTestParametersForConfig(final String[] filePath) {
-    //    return params.generate(filePath);
     return params.generate(
         Arrays.stream(filePath)
-            .map(f -> Paths.get("src/test/resources/ethereum-tests/" + f).toAbsolutePath())
+            .map(f -> Paths.get("src/test/resources/ethereum-tests/" + f).toFile())
             .toList());
   }
 
